--- a/index.html
+++ b/index.html
@@ -8,15 +8,24 @@
 </head>
 <body>
     <main class="div-container">
-        <div class="item item1">1</div>
-        <div class="item item2">2</div>
-        <div class="item item3">3</div>
-        <div class="item item4">4</div>
-        <div class="item item5">5</div>
-        <div class="item item6">6</div>
-        <div class="item item7">7</div>
-        <div class="item item8">8</div>
-        <div class="item item9">9</div>
+        <div class="item item1">space</div>
+        <div class="item item2">1</div>
+        <div class="item item3">2</div>
+        <div class="item item4">3</div>
+        <div class="item item5">+</div>
+        <div class="item item6">4</div>
+        <div class="item item7">5</div>
+        <div class="item item8">6</div>
+        <div class="item item9">-</div>
+        <div class="item item10">7</div>
+        <div class="item item11">8</div>
+        <div class="item item12">9</div>
+        <div class="item item13">x</div>
+        <div class="item item14">c</div>
+        <div class="item item15">0</div>
+        <div class="item item16">X</div>
+        <div class="item item17">/</div>
+        <div class="item item18">=</div>
     </main>
     <script src="./index.js"></script>
 </body>
