--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <main class="div-container">
-        <div class="item item1">space</div>
+        <div class="item item1"></div>
         <div class="item item2">1</div>
         <div class="item item3">2</div>
         <div class="item item4">3</div>
