i added the delete img

--- a/index.html
+++ b/index.html
@@ -5,27 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>calculator</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
     <main class="div-container">
-        <div class="item item1"></div>
-        <div class="item item2">1</div>
-        <div class="item item3">2</div>
-        <div class="item item4">3</div>
-        <div class="item item5">+</div>
-        <div class="item item6">4</div>
-        <div class="item item7">5</div>
-        <div class="item item8">6</div>
-        <div class="item item9">-</div>
-        <div class="item item10">7</div>
-        <div class="item item11">8</div>
-        <div class="item item12">9</div>
-        <div class="item item13">x</div>
-        <div class="item item14">c</div>
-        <div class="item item15">0</div>
-        <div class="item item16">X</div>
-        <div class="item item17">/</div>
-        <div class="item item18">=</div>
+        <div class="item item1">
+            <div class="result">4ffufufufufufufufufufufufufufufufufufufufufufufufuf</div>
+            <div class="calculation">2+2</div>
+        </div>
+        <div class="item center item2">1</div>
+        <div class="item center item3">2</div>
+        <div class="item center item4">3</div>
+        <div class="item center item5">+</div>
+        <div class="item center item6">4</div>
+        <div class="item center item7">5</div>
+        <div class="item center item8">6</div>
+        <div class="item center item9">-</div>
+        <div class="item center item10">7</div>
+        <div class="item center item11">8</div>
+        <div class="item center item12">9</div>
+        <div class="item center item13">x</div>
+        <div class="item center item14">c</div>
+        <div class="item center item15">0</div>
+        <div class="item center item16"><img src="./images/🦆 icon _delete_.png" alt=""></div>
+        <div class="item center item17">/</div>
+        <div class="item center item18">=</div>
     </main>
     <script src="./index.js"></script>
 </body>
