--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <div class="item center item17" onclick="clickOperator('/')">/</div>
         <div class="item center item18" onclick="calculate()">=</div>
     </main>
+    <footer>Created by <a href="https://linktr.ee/timidelad">TIMILEHIN</a></footer>
     <script src="./index.js"></script>
 </body>
 </html>
